manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: datalab
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
        lifecycle:
          postStart:
            exec:
              command: [ "/bin/sh", "-c", "/bin/ollama pull gemma2:2b" ]
        volumeMounts:
        - mountPath: /root/.ollama
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ragchain-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ragchain
  namespace: datalab
spec:
  selector:
    matchLabels:
      name: ragchain
  template:
    metadata:
      labels:
        name: ragchain
    spec:
      containers:
      - name: ragchain
        image: ghcr.io/tom333/ragchain:main
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
