manifests/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ragchain
  namespace: datalab
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.tgu.ovh/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.tgu.ovh/oauth2/start?rd=https://chat.tgu.ovh"
spec:
  rules:
    - host: chat.tgu.ovh
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ragchain
              port:
                number: 8000

  tls:
    - secretName: ragchain-tls
      hosts:
        - chat.tgu.ovh
